[tool.poetry]
name = "tic-tac-toe"
version = "0.1.0"
description = "API server for the game"
authors = ["Serhii Matviienko <spirit.q2@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
flask = "^3.0.0"
flask-migrate = "^4.0.5"
flask-sqlalchemy = "^3.1.1"
psycopg2-binary = "^2.9.9"
flask-pydantic = "^0.11.0"


[tool.poetry.group.dev.dependencies]
black = {extras = ["d"], version = "^23.11.0"}
pytest-flask = "^1.3.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
